added new column +/-, removed comment in dockercompose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   frontend:
     container_name: st-web
     build:
-      context: ./web  # Katalog z plikami aplikacji Vue.js
+      context: ./web
     ports:
       - "8080:8080"
     volumes:
